@@ -1,3 +1,15 @@
+2011-10-20  Yuqiang Xian  <yuqiang.xian@intel.com>
+
+        DFG JIT 32_64 - Fix ByteArray speculation
+        https://bugs.webkit.org/show_bug.cgi?id=70571
+
+        Reviewed by Filip Pizlo.
+
+        * dfg/DFGSpeculativeJIT.h:
+        (JSC::DFG::ValueSource::forPrediction):
+        * dfg/DFGSpeculativeJIT32_64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+
 2011-10-20  Vincent Scheib  <scheib@chromium.org>
 
         MouseLock compile and run time flags.
